# fisica

CDetSim/: CMakeLists.txt  MIT-LICENSE.txt  README.md  common.cmake
CDetSim/cdetsim/: Reflector.cpp  Reflector.h
CDetSim/cfg/: exp.def.json  expcone.def.json  expcyl.def.json  extended.def.json  magic.def.json  mirror_info.dat.json  plot.py  qe-initial.json  reflectivity.dat.json  reflector.param.json  sim.ext.json  sim.magic.json  simulator.param.json  simulator.param.json.orig
CDetSim/doc/: CDetSim.org  config.org
CDetSim/libs/: CMakeLists.txt  common.cmake
CDetSim/libs/filehdl/: CMakeLists.txt  Makefile  jsonfhdl.h  qdtrephdl.cpp
CDetSim/libs/iniparser/: CMakeLists.txt
CDetSim/libs/json/: AUTHORS  CMakeLists.txt  json.cpp  json.h  jsontest  magic.def.json  main.cpp  with_comments.json
CDetSim/libs/mathtools/: README  mathtools.cpp
CDetSim/scripts/: dump_shower.py  plot_cherarrplant-2.py  plot_cherarrplant.py  plot_results.py  plothexmap.py  show_header_data.py
CDetSim/src/: CMakeLists.txt  CPhoton.cpp  CPhoton.h  Camera.h  CameraHexPix.cpp  CameraHexPix.h  CameraSqPix.cpp  CameraSqPix.h  CerPhotonsSource.cpp  CerPhotonsSource.h  ExpConeReflector.cpp  ExpConeReflector.h  ExpCylinderReflector.cpp  ExpCylinderReflector.h  ExpPlaneReflector.cpp  ExpPlaneReflector.h  ExperimentalReflector.cpp  ExperimentalReflector.h  ExtendedReflector.cpp  ExtendedReflector.h  InputDataSource.cpp  InputDataSource.h  MAGICReflector.cpp  MAGICReflector.h  Makefile  Moments.cpp  Moments.h  OutputDataHandler.cpp  OutputDataHandler.h  PixelsSet.cpp  PixelsSet.h  Reflector.cpp  Reflector.h  Simulator.cpp  Simulator.h  main.cpp  parse_args.h  physconst.h
CVSROOT/: passwd
CVSROOT/qmagicdisplay/qmagicdisplay/: Makefile.am  allsky_egret.xpm  autointerface.h  camerabase.cpp  camerapixels.h  cameraplane.cpp  cameraplane.h  dateventdata.cpp  dateventdata.h  dateventpostdata.h  datfilefactory.cpp  datfilefactory.h  ellipsoid.cpp  eventdata.cpp  eventheader.cpp  eventheader.h  eventpostdata.cpp  evthdr.h  filefactory.h  footer  inidb.h  magicpar.h  main.cpp  paletteauto.cpp  paletteauto.h  palettelin.cpp  palettelin.h  palettelog.cpp  palettelog.h  palettemode.h  pheeventdata.cpp  pheeventpostdata.h  pixel.h  pixelbase.cpp  pixelbase.h  qmagicdisplay.cpp  qmagicdisplay.h  qmagicdisplaydoc.cpp  qmagicdisplaydoc.h  qmagicdisplayview.cpp  (+8 more)
c520/src/: ATM75  ATM80  ATM84  ATM85  ATM86  ATM87  ATM88  ATM89  ATM90  CMakeLists.txt  EGSDAT2  GHEISHA.f  INPUTS  Makefile  NUCNUCCS  QGSJET.f  READ_ME  SIBYLL.f  VENUS.f  VENUSDAT  addang.f  addani.f  age.f  amoeba.f  amotry.f  annih.f  ausgab.f  ausgb2.f  avage.f  avept.f  bhabha.f  block1.f  box2.f  box3.f  box60.f  box61.f  box62.f  box63.f  box65.f  box66.f  (+131 more)
k2scanplot/k2scanplot/: Makefile.am  k2scanplot.desktop  k2scanplot.h  k2scanplotdoc.h  k2scanplotview.cpp  main.cpp
kscanplot/: am_edit  configure.in  kscanplot.lsm
kscanplot/kscanplot/: Makefile.am  kscanplotview.cpp  main.cpp  resource.h
kscanplot/po/: Makefile.am  kscanplot.pot
libs/: CMakeLists.txt  _tpl.tgz  common.cmake  libs.cmake
libs/_tpl/: AUTHORS  CMakeLists.txt  README  generate_doc.sh
libs/_tpl/src/: CMakeLists.txt
libs/chimg/: AUTHORS  CMakeLists.txt
libs/chimg/doc/: chimg.md
libs/chimg/src/: CMakeLists.txt  islands.cpp  moments.cpp  moments.h
libs/filehdl/: AUTHORS  CMakeLists.txt  README  qdtrephdl.h
libs/filehdl/doc/: filehdl.md
libs/filehdl/src/: CMakeLists.txt  jsonfhdl.cpp  qdtrephdl.cpp
libs/filetools/: AUTHORS  CMakeLists.txt  README
libs/filetools/doc/: filetools.md
libs/filetools/src/: CMakeLists.txt  filetools.cpp
libs/httpsc/: AUTHORS  CMakeLists.txt
libs/httpsc/doc/: tools.md
libs/httpsc/src/: CMakeLists.txt  dbg.h  httpsc.cpp  httpsc.h
libs/infix/: AUTHORS  CMakeLists.txt  Makefile  README
libs/infix/doc/: infix.md
libs/infix/src/: CMakeLists.txt  infix.cpp  infix.h
libs/iniparser/: AUTHORS  CMakeLists.txt  README
libs/iniparser/doc/: iniparser.md
libs/iniparser/src/: CMakeLists.txt
libs/json/: AUTHORS  CMakeLists.txt  README
libs/json/doc/: json.md
libs/json/src/: CMakeLists.txt  json.cpp  json.h
libs/log/: AUTHORS  CMakeLists.txt  README
libs/log/doc/: log.md
libs/log/src/: CMakeLists.txt  log.cpp
libs/mathtools/: CMakeLists.txt  README  mathtools.h
libs/mathtools/src/: CMakeLists.txt  angles.cpp  angles.h  comparisons.cpp  comparisons.h  histogram.cpp  histogram.h  mathtools.cpp  mathtools.h  mathtools_tuples.cpp  matrix.cpp  matrix.h  quaternions.cpp  quaternions.h  surfaces.cpp  surfaces.h  vectors.cpp  vectors.h
libs/ranlib/: AUTHORS  CMakeLists.txt  ChangeLog  README
libs/ranlib/src/: CMakeLists.txt  com.c  linpack.c  ranlib.c  ranlib.h
libs/str/: AUTHORS  CMakeLists.txt  README
libs/str/doc/: str.md
libs/str/src/: CMakeLists.txt
libs/tools/: CMakeLists.txt  README  tools.cpp
libs/tools/src/: CMakeLists.txt  filetools.cpp  launcher.cpp  process.h  tools.cpp
libs/uuid/: AUTHORS  CMakeLists.txt  README
libs/uuid/doc/: uuid.md
libs/uuid/src/: CMakeLists.txt
libs/vos/: AUTHORS  CMakeLists.txt  README
libs/vos/doc/: vos.md
newcamera/newcamera/: Makefile.am
qdisplay/: Makefile.am  configure.in  qdisplay.kdevprj  qdisplay.lsm
qdisplay/qdisplay/: Black2White  Blues4  Makefile.am  White2Black  filequit.xpm  infinitearray.cpp  infinitearray.h  main.cpp  palette.awk  pixels_simplearray.h  printopt.kdevdlg  qdisplay.cpp  qdisplay.h  qdisplaydoc.cpp  qdisplaydoc.h  qdisplayview.cpp  qdisplayview.h  qprintoptions.cpp  qprintoptions.h  qrunhist.cpp  qrunhistdata.cpp  resource.h  runhist.kdevdlg
qgrace/qgrace/: Makefile.am  qgrace.h  qgracedoc.cpp  qgraceview.cpp
qscanplot/qscanplot/: Makefile.am  axes.cpp  axispoint.cpp  axispoint.h  curvepoint.h  dlgaxispoint.h  figurepoint.cpp  figurepoint.h  gpoint.cpp  gpoint.h  main.cpp  pointlist.cpp  pointlist.h  qscanplot.cpp  qscanplot.h  qscanplotdoc.cpp  qscanplotdoc.h  qscanplotview.cpp  qscanplotview.h  resource.h
uis/kscanplot/: AUTHORS  Makefile.am  kscanplot.kdevprj
uis/newcamera/: Makefile.am  newcamera.kdevprj  newcamera.lsm
(+1100 files in other folders)
