####### kdevelop will overwrite this part!!! (begin)##########
dist-hook:
	-perl am_edit

SUBDIRS = qdisplay 

EXTRA_DIST = qdisplay.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO NEWS qdisplay.lsm 

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if 
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 

