####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = newcamera
newcamera_SOURCES = main.cpp 
newcamera_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = newcamera

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
newcamera_LDFLAGS = $(all_libraries) 
                                                                                
