####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = newcamera 

EXTRA_DIST = newcamera.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO newcamera.lsm 

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4


